# AgentAI-1Feb2026

./: docker-compose.yml
crewai/: README.md  agent.py  requirements.txt
employee-api/: Dockerfile  init_db.py  main.py
employee-mcp/: server.py
hotel-agent-langfuse/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
hotel-agent-langfuse/data/hotel_knowledge/: facilities.md  faq.md  policies.md  rooms.md
hotel-agent-langfuse/docs/: PLAN.md
hotel-agent-langfuse/scripts/: run_evaluation.py  seed_knowledge.py
hotel-agent-langfuse/src/hotel_agent/: __init__.py  config.py  main.py
hotel-agent-langfuse/src/hotel_agent/agents/: amenities.py  billing.py  booking.py  coding_agent.py  complaints.py  db_agent.py  general.py  mcp_agent.py  pm_agent.py  review_agent.py  router.py
hotel-agent-langfuse/src/hotel_agent/graph/: workflow.py
hotel-agent-langfuse/src/hotel_agent/knowledge/: hotel_data.py  vectorstore.py
hotel-agent-langfuse/src/hotel_agent/models/: schemas.py
hotel-agent-langfuse/src/hotel_agent/observability/: evaluation.py  metrics.py  tracing.py
hotel-agent-langfuse/src/hotel_agent/tools/: billing_tools.py  booking_tools.py  knowledge_base.py
hotel-agent-langfuse/tests/: conftest.py  test_agents.py  test_observability.py  test_router.py
langchain/: rag_demo.py  requirements.txt
langsmith-demo/: .env.example  agent.py  requirements.txt
multiagent booking system/: Dockerfile  docker-compose.yml  flights.db  graph.py  main.py  mcp_server_flights.py  readme.md  requirements.txt  sessions.db
(+15 files in other folders)
